[package]
name = "solana-evm-loader-program"
version = "0.1.0"
description = "Solana EVM loader"
authors = ["Vladimir Motylenko <vld@stegos.com>"]
license = "Apache-2.0"
edition = "2021"

[dependencies]
log = "0.4.8"
solana-logger = { path = "../../../logger", version = "=1.10.41" }
solana-sdk = { path = "../../../sdk", version = "=1.10.41" }
solana-program-runtime = { path = "../../../program-runtime", version = "=1.10.41" }
evm-state = { path = "../../evm-state", version = "0.1" }
assert_matches = "1.4"
bincode = "1.3.1"
borsh = "0.9.3"
serde = "1.0"
primitive-types = { version = "0.12", features = ["borsh"] }
hex = "0.4.2"
simple_logger = "2.2.0"
sha3 = "0.9.1"
ethabi = "18.0.0"
once_cell = "1.5.2"
snafu = "0.7"
crc32fast = "1.2.1"
sha2 = "0.9.4"
ripemd160 = "0.9.1"
num-derive = "0.3"
num-traits = "0.2"
num = { version = "0.1", default-features = false, features = ["bigint"] }
substrate-bn = { git = "https://github.com/paritytech/bn.git", rev = "63f8c58", default-features = false }
byteorder = "1.4.3"
eip-152 = "0.1.0"

[lib]
crate-type = ["lib", "cdylib"]
name = "solana_evm_loader_program"

[dev-dependencies]
hex-literal = "0.3.1"
byteorder = "1.4"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
