[package]
name = "evm-gas-station"
version = "0.1.0"
description = "EVM gas-station"
license = "Apache-2.0"
edition = "2021"

[dependencies]
arrayref = "0.3.6"
borsh = "0.9.3"
evm-rpc = { path = "../../evm-rpc" }
num-derive = "0.3.3"
num-traits = "0.2.15"
solana-evm-loader-program = { path = "../evm_loader" }
solana-program = { path = "../../../sdk/program", version = "=1.9.29" }
solana-sdk = { path = "../../../sdk", version = "=1.9.29" }
thiserror = "1.0.37"

[dev-dependencies]
solana-program-test = { path = "../../../program-test", version = "=1.9.29" }
tokio = { version = "~1.14.1", features = ["full"] }

[lib]
crate-type = ["lib", "cdylib"]
name = "evm_gas_station"