[package]
<<<<<<<< HEAD:programs/bpf/rust/sysvar/Cargo.toml
name = "solana-bpf-rust-sysvar"
version = "1.6.14"
========
name = "solana-bpf-rust-ro-account_modify"
version = "1.9.13"
>>>>>>>> v1.9.13:programs/bpf/rust/ro_account_modify/Cargo.toml
description = "Solana BPF test program written in Rust"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
<<<<<<<< HEAD:programs/bpf/rust/sysvar/Cargo.toml
documentation = "https://docs.rs/solana-bpf-rust-sysvar"
edition = "2018"

[dependencies]
solana-program = { path = "../../../../sdk/program", version = "=1.9.13" }
========
documentation = "https://docs.rs/solana-bpf-rust-ro-modify"
edition = "2021"

[dependencies]
solana-program = { path = "../../../../sdk/program", version = "=1.9.13" }
>>>>>>>> v1.9.13:programs/bpf/rust/ro_account_modify/Cargo.toml

[lib]
crate-type = ["cdylib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
